# zephyr

./: .clangd  .gitignore  CMakeLists.txt  MODULE_DESIGN.md  Makefile  README.md  TYPING_ROADMAP.md  ZEPHYR.md  aggressive_yield_test.zephyr  concurrency_issue_demo.zephyr  concurrency_test.zephyr  copy.txt  corrected_interleave_test.zephyr  debug_segfault.zephyr  demo.txt  final_concurrency_demo.zephyr  generate_parser.py  ideas.md  run_comprehensive_example.sh  run_embedded_demos.sh  simple_concurrency_test.zephyr  simple_interleave_test.zephyr  test_all_examples.sh  test_comparisons.zephyr  test_complete_unification.zephyr  yield_test.zephyr  zephyr.pc.in
docs/: DOCUMENTATION_REORGANIZATION.md  FUNCTION_OVERLOADING.md  NUMBER_FORMATS.md  SIZED_INTEGERS.md  contributing.md  cpp_api_guide.md  cpp_api_overview.md  cpp_api_reference.md  enhanced_enum_pattern_matching.md  faq.md  getting_started.md  getting_started_cpp.md  index.md  language_overview.md  plugin_api_reference.md  plugin_development.md  plugin_system_implementation.md  style_guide.md
docs/examples/: 01_basic_features.md  02_data_structures.md  03_functions_and_lambdas.md  04_classes_and_objects.md  05_advanced_indexing.md  06_advanced_classes.md  07_debugging_and_edge_cases.md  08_comprehensive_examples.md  09_string_operations.md  10_compound_assignment.md  11_compound_assignment_comprehensive.md  12_lambda_dictionaries_nested.md  13_async_await_basic.md  14_async_parallel.md  15_async_promise_all.md  16_async_comprehensive_test.md  17_enhanced_loops.md  18_optional_chaining.md  19_async_class_methods.md  20_explicit_typing.md  21_exit_function.md  22_interfaces.md  23_built_in_functions.md  24_import_system.md  25_exception_handling.md  README.md
examples/: 01_basic_features.zephyr  02_data_structures.zephyr  03_functions_and_lambdas.zephyr  04_classes_and_objects.zephyr  05_advanced_indexing.zephyr  06_advanced_classes.zephyr  07_debugging_and_edge_cases.zephyr  08_comprehensive_examples.zephyr  09_string_operations.zephyr  10_compound_assignment.zephyr  11_compound_assignment_comprehensive.zephyr  12_lambda_dictionaries_nested.zephyr  13_async_await_basic.zephyr  14_async_parallel.zephyr  15_async_promise_all.zephyr  16_async_comprehensive_test.zephyr  17_enhanced_loops.zephyr  18_optional_chaining.zephyr  19_async_class_methods.zephyr  20_explicit_typing.zephyr  21_exit_function.zephyr  22_interfaces.zephyr  23_built_in_functions.zephyr  24_explicit_typing_and_init_restrictions.zephyr  25_bitwise_operations.zephyr  26_function_overloading.zephyr  27_interface_overloading.zephyr  28_class_export_plugin_usage.zephyr  29_number_formats.zephyr  30_with_statement_file_io.zephyr  31_sized_integers.zephyr  32_comprehensive_enums.zephyr  33_enhanced_enum_pattern_matching.zephyr  34_compare_classes.zephyr  CLASS_EXPORT_IMPROVED.md  COMPREHENSIVE_EXAMPLE_README.md  README.md  advanced_exception_patterns.zephyr  api_demo.cpp  call_test.zephyr  (+40 more)
grammar/: Zephyr.g4
include/: args.hpp  ast.hpp  async_scheduler.hpp  error_context.hpp  errors.hpp  function_overload_resolver.hpp  interpreter.hpp  lexer.hpp  module_loader.hpp  parser.hpp  runtime.hpp  runtime_error.hpp  task.hpp  token.hpp
include/objects/: boolean_object.hpp  builtin_function_object.hpp  class_instance_object.hpp  class_object.hpp  dictionary_object.hpp  float_object.hpp  function_object.hpp  int_object.hpp  interface_object.hpp  lambda_object.hpp  list_object.hpp  module_object.hpp  none_object.hpp  object.cpp  object.hpp  objects.hpp  promise_object.hpp  string_object.hpp
include/types/: boolean_type.hpp  builtin_function_type.hpp  class_type.hpp  dictionary_type.hpp  float_type.hpp  function_type.hpp  int_type.hpp  interface_type.hpp  lambda_type.hpp  list_type.hpp  none_type.hpp  promise_type.hpp  string_type.hpp  type.hpp  types.hpp
include/zephyr/: ast.hpp  async_scheduler.hpp  errors.hpp  integer_kinds.hpp  interpreter.hpp  lexer.hpp  module_loader.hpp  parser.hpp  runtime.hpp  runtime_error.hpp  token.hpp  zephyr.hpp
src/: args.cpp  ast.cpp  async_scheduler.cpp  error_context.cpp  function_overload_resolver.cpp  integer_kinds.cpp  interpreter.cpp  lexer.cpp  main.cpp  module_loader.cpp  parser.cpp  runtime.cpp  task.cpp
src/api/: cpp_object_wrapper.cpp  dynamic_loader.cpp  enum_api.cpp  native_module.cpp  result.cpp  type_converter.cpp  zephyr_api.cpp
src/objects/: boolean_object.cpp  builtin_function_object.cpp  class_instance_object.cpp  class_object.cpp  dictionary_object.cpp  enum_object.cpp  exception_object.cpp  file_object.cpp  float_object.cpp  function_object.cpp  int_object.cpp  interface_object.cpp  lambda_object.cpp  list_object.cpp  module_object.cpp  none_object.cpp  object.cpp  promise_object.cpp  string_object.cpp
src/types/: boolean_type.cpp  builtin_function_type.cpp  class_type.cpp  dictionary_type.cpp  enum_type.cpp  exception_type.cpp  file_type.cpp  float_type.cpp  function_type.cpp  int_type.cpp  interface_type.cpp  lambda_type.cpp  list_type.cpp  module_type.cpp  none_type.cpp  promise_type.cpp  string_type.cpp  type.cpp
test_escapes/: simple_demo.zephyr  string_features_demo.zephyr  test_raw_multiline.zephyr
tests/: enhanced_enum_pattern_matching.zephyr  enum_pattern_matching_benchmark.zephyr  test_abstract_class.zephyr  test_abstract_method_simple.zephyr  test_abstract_simple.zephyr  test_final_class.zephyr  test_inheritance.zephyr  test_inheritance_comprehensive.zephyr  test_inheritance_errors.zephyr  test_inheritance_order.zephyr  test_mixed_inheritance.zephyr  test_multiple_class_error.zephyr  test_plugin_api.cpp  test_simple_inheritance.zephyr  test_sized_integers.zephyr  test_super_method.zephyr
tests/escapes/: string_comparison.zephyr
tests/modules/: README.md  basic_test.zephyr  comprehensive_import_test.zephyr  conditional_import_guide.zephyr  conditional_import_test.zephyr  double_import_test.zephyr  import_test.zephyr  internal_import_test.zephyr  internal_keyword_test.zephyr  math_utils.zephyr  math_with_internal.zephyr  path_import_test.zephyr  repl_test.zephyr  run_module_tests.zephyr  (+5 more)
(+41 files in other folders)
